--- a/Lab2/lab2-threejs/lab2.html
+++ b/Lab2/lab2-threejs/lab2.html
@@ -40,7 +40,7 @@
     		<label for="animation">Animation</label>
     	</div>
     	<div>
-    		<input type="checkbox" id="wireframe" name="wireframe" checked>
+    		<input type="checkbox" id="wireframe" name="wireframe">
     		<label for="wireframe">Wireframe</label>
     	</div>
     </div>
